# swoq

./: .editorconfig  .gitattributes  .gitignore  Directory.Build.props  LICENSE  README.md  SWOQ.sln  load_test.cmd  simple_bot.py  start_all.cmd  start_all.sh  todo.md  update_protos.cmd  update_protos.sh
Benchmark/: Benchmark.csproj  Program.cs  packages.lock.json
Bot/ExampleRust/: .gitignore  Cargo.toml  README.md  build.rs  main.rs  swoq.rs
Bot/ExampleRust/proto/: swoq.proto
Dashboard/: App.xaml  App.xaml.cs  Dashboard.csproj  Program.cs  ViewLocator.cs  packages.lock.json
Data/: Data.csproj  ISwoqDatabase.cs  LevelStatistic.cs  QuestProgress.cs  SwoqDatabase.cs  SwoqDatabaseInMemory.cs  SwoqDatabaseSettings.cs  User.cs  appsettings.json  packages.lock.json
Documentation/: swoq.md
Infra/: Cell.cs  CellEx.cs  CellExtensions.cs  Clock.cs  ConsoleColors.cs  Converters.cs  GameCharacters.cs  IEnumerableEx.cs  IMapGenerator.cs  Infra.csproj  Inventory.cs  Map.cs  MapBuilder.cs  MapConvert.cs  MapGenerator.cs  MapVisibility.cs  MutableMap.cs  Overview.cs  OverviewBuilder.cs  PickOneExtension.cs  Position.cs  PositionEx.cs  Rnd.cs  Room.cs  TileMap.cs  packages.lock.json
InfraUI/: InfraUI.csproj  TileSet.cs  packages.lock.json
Interface/: Converters.cs  Interface.csproj  ProtoReader.cs  dashboard.proto  monitor.proto  packages.lock.json  player.proto  replay.proto  swoq.proto  user.proto
MapGeneratorBenchmark/: MapGeneratorBenchmark.csproj  Program.cs  packages.lock.json
MapGeneratorDurationTest/: MapGeneratorDurationTest.csproj  Program.cs  (+1 more)
(+397 files in other folders)
