[package]
name = "example-bot"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "example-bot"
path = "main.rs"

[dependencies]
dotenv = "0.15.0"
prost = "0.13.5"
time = { version = "0.3.41", features = ["formatting", "local-offset"] }
tokio = { version = "1.45.1", features = ["rt-multi-thread", "macros"] }
tonic = "0.13.1"

[build-dependencies]
tonic-build = "0.13.1"
